#update - as the layout of Notification, can't  set 'onClick Attributes, or will not display.

--- a/yueting/src/main/res/values/strings.xml
+++ b/yueting/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string-array name="read_textStyle_SP">
         <item>正常</item>
         <item>斜体</item>
-        <item>粗体</item>
+        <item>粗体</item>0
         <item>粗斜体</item>
     </string-array>
 </resources>
