#update - fix bugs and optimize , rewrite codes

--- a/yueting/src/main/res/values/strings.xml
+++ b/yueting/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
         <item>粗体</item>0
         <item>粗斜体</item>
     </string-array>
+    <string-array name="pdf_read_mode">
+        <item>竖直</item>
+        <item>横向</item>
+    </string-array>
 </resources>
 
