--- a/yueting/src/main/res/values/strings.xml
+++ b/yueting/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">yueting</string>
+    <string name="app_name">悦听</string>
     <string name="read">悦读</string>
     <string name="music">欣听</string>
     <string-array name="read_textStyle_SP">
